Add get price endpoint
